# auto_project

./: PYPI_2FA.py  README.md  msg,md  pyproject.toml  pytest.ini
.github/workflows/: publish_to_pypi.yaml
src/test_pytest/: plugin.py
tests/: test_data.py
